--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,125 @@
-/* You can add global styles to this file, and also import other style files */
+//#region Imports
+@import "bootstrap/scss/bootstrap";
+@import "primeicons/primeicons.css";
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+TZ:wght@100..400&family=Qwitcher+Grypen:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Playwrite+TZ:wght@100..400&family=Qwitcher+Grypen:wght@400;700&display=swap');
+//#endregion Imports
+
+//#region Variaveis
+$cream: #FEF8EC;
+$cream-line: #f4ecda;
+$dark-red: $red-700;
+$blue-pen: #003049;
+$blue-pen-light: #669BBC;
+$fire-brick: #C1121F;
+//#endregion Variaveis
+
+//#region Texto
+.txt-blue-pen {
+    color: $blue-pen;
+}
+
+$pesos: 100, 200, 300, 400, 500, 600, 700, 800, 900;
+
+@each $peso in $pesos {
+    .teste-#{$peso} {
+        font-weight: $peso;
+    }
+
+    .cursive-pen-#{$peso} {
+        font-family: "Qwitcher Grypen", cursive;
+        font-weight: $peso;
+        font-style: normal;
+    }
+    
+    .caveat-#{$peso} {
+        font-family: "Caveat", cursive;
+        font-optical-sizing: auto;
+        font-weight: $peso;
+        font-style: normal;
+    }
+
+    .cursive-#{$peso} {
+        font-family: "Playwrite TZ", cursive;
+        font-optical-sizing: auto;
+        font-weight: $peso;
+        font-style: normal;
+    }
+
+}
+
+$sizes: 10, 11, 12;
+@each $sz in $sizes {
+    .fs-#{$sz}{
+        font-size: #{$sz}rem;
+    }
+}
+
+.txt-center{
+    text-align: center !important;
+}
+//#endregion Texto
+
+//#region Alinhamentos
+.flex-end {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.flex-center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column
+}
+//#endregion Alinhamentos
+
+//#region Bootstrap Customizados
+.bg-red-700 {
+  background-color: $red-700;
+}
+
+.bg-cream {
+  background-color: $cream;
+}
+
+.custom-card{
+    @extend .shadow, .card, .fade-in-fast;
+    padding: 1rem;
+    border: none;
+    background-color: #fff;
+    height: 85vh;
+    overflow: auto;
+}
+//#endregion Bootstrap Customizados
+
+//#region Animações
+.fade-in {
+    opacity: 1;
+    animation-name: fadeInOpacity;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-in;
+    animation-duration: 2s;
+    color: $blue-pen;
+    
+}
+
+.fade-in-fast {
+    @extend .fade-in;
+	animation-duration: 0.4s;
+}
+
+.fade-in-slow {
+    @extend .fade-in;
+	animation-duration: 3s;
+}
+
+@keyframes fadeInOpacity {
+    0% {
+        opacity: 0;
+	}
+	100% {
+        opacity: 1;
+	}
+}
+//#endregion Animações
